--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
-.body-font {
-  font-family: "Roboto", sans-serif;
-  font-family: "Raleway", sans-serif;
+:root {
+  --font-color: #212121;
 }
 :root {
   --brand-color: #2196f3;
+}
+:root {
+  --background-color: #2f303a;
+}
+.body-font {
+  font-family: "Roboto", sans-serif;
+  color: var(--font-color);
 }
 .logo-web {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--brand-color);
 }
@@ -17,13 +23,14 @@
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: black;
   text-decoration: none;
 }
 
 .header-text {
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   text-decoration: none;
@@ -31,4 +38,146 @@
 }
 .header-text:hover {
   color: var(--brand-color);
+}
+.contact-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  text-decoration: none;
+  color: #757575;
+}
+.contact-text:hover {
+  color: var(--brand-color);
+}
+.h1-box {
+  background-color: var(--background-color);
+}
+h1 {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+.buttons {
+  background: #f5f4fa;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  cursor: pointer;
+}
+.buttons:hover {
+  background: var(--brand-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.button-h1-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  letter-spacing: 0.06em;
+  color: var(--font-color);
+  text-align: center;
+}
+.button-h1-text:hover {
+  color: #ffffff;
+}
+.lorem-ipsum-header {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.lorem-ipsum-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--font-color);
+}
+.specialist-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: var(--font-color);
+}
+.specialization-name {
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.footer-box {
+  background-color: var(--background-color);
+}
+.logo-studio-footer {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
+}
+.address-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+.portfolio-icon-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--font-color);
+}
+.property-name {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+.buttons-portfolio {
+  width: 93px;
+  height: 38px;
+  left: 639px;
+  top: 174px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+}
+.buttons-portfolio:hover {
+  background-color: var(--brand-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.buttons-portfolio-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--font-color);
+}
+.buttons-portfolio-text:hover {
+  color: #ffffff;
 }
