--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,10 @@
 :root {
   --font-color: #212121;
-}
-:root {
   --brand-color: #2196f3;
-}
-:root {
   --background-color: #2f303a;
 }
 .body-font {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Raleway", sans-serif;
   color: var(--font-color);
 }
 .logo-web {
@@ -36,8 +32,10 @@
   text-decoration: none;
   color: #212121;
 }
-.header-text:hover {
+.header-text:hover,
+.header-text:focus {
   color: var(--brand-color);
+  outline: none;
 }
 .contact-text {
   font-weight: 500;
@@ -46,8 +44,10 @@
   text-decoration: none;
   color: #757575;
 }
-.contact-text:hover {
+.contact-text:hover,
+.contact-text:focus {
   color: var(--brand-color);
+  outline: none;
 }
 .h1-box {
   background-color: var(--background-color);
@@ -63,18 +63,13 @@ h1 {
   color: #ffffff;
 }
 .buttons {
-  background: #f5f4fa;
+  background-color: var(--brand-color);
   border-radius: 4px;
   width: 200px;
   height: 50px;
-  left: 700px;
-  top: 430px;
-  cursor: pointer;
 }
 .buttons:hover {
-  background: var(--brand-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  cursor: pointer;
 }
 .button-h1-text {
   font-weight: 700;
@@ -82,10 +77,7 @@ h1 {
   line-height: 1.87;
   display: flex;
   letter-spacing: 0.06em;
-  color: var(--font-color);
   text-align: center;
-}
-.button-h1-text:hover {
   color: #ffffff;
 }
 .lorem-ipsum-header {
@@ -135,6 +127,7 @@ h2 {
   text-decoration: none;
 }
 .address-text {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -158,17 +151,17 @@ h2 {
 .buttons-portfolio {
   width: 93px;
   height: 38px;
-  left: 639px;
-  top: 174px;
   background: #f5f4fa;
   border-radius: 4px;
   text-align: center;
-  cursor: pointer;
 }
-.buttons-portfolio:hover {
+.buttons-portfolio:hover,
+.buttons-portfolio:focus {
   background-color: var(--brand-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  outline: none;
 }
 .buttons-portfolio-text {
   font-weight: 500;
@@ -178,6 +171,10 @@ h2 {
   letter-spacing: 0.03em;
   color: var(--font-color);
 }
-.buttons-portfolio-text:hover {
+.buttons-portfolio-text:hover,
+.buttons-portfolio-text:focus {
   color: #ffffff;
+}
+.list-style {
+  list-style: none;
 }
